--- a/app/src/main/res/layout/recycler_conctact_layout.xml
+++ b/app/src/main/res/layout/recycler_conctact_layout.xml
@@ -1,26 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="10dp">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="name"
-        android:textStyle="bold"
-        android:textSize="23sp"
-        android:id="@+id/re_name"
-        />
+   <LinearLayout
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+      android:orientation="vertical"
+       android:layout_weight="1"
+       >
+       <TextView
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:text="name"
+           android:textStyle="bold"
+           android:textSize="23sp"
+           android:id="@+id/re_name"
+           />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="name"
-        android:textSize="17sp"
-        android:id="@+id/re_number"
-        android:layout_marginTop="9dp"
+       <TextView
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:text="name"
+           android:textSize="17sp"
+           android:id="@+id/re_number"
+           android:layout_marginTop="9dp"
+           />
+   </LinearLayout>
+    <ImageButton
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="9"
+        android:background="@android:color/transparent"
+        android:src="@drawable/baseline_more_vert_24"
+        android:id="@+id/more"
         />
 
 </LinearLayout>
