--- a/app/src/main/res/layout/edit_activity.xml
+++ b/app/src/main/res/layout/edit_activity.xml
@@ -21,7 +21,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:layout_margin="20dp"
         >
         <Button
@@ -30,27 +30,9 @@
             android:text="add"
             android:layout_marginTop="10dp"
             android:id="@+id/add"
-            android:layout_weight="1"
+            android:layout_gravity="center_horizontal"
             />
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="update"
-            android:layout_marginTop="10dp"
-            android:id="@+id/update"
-            android:layout_weight="1"
-            android:layout_marginHorizontal="20dp"
 
-            />
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="delete"
-            android:layout_marginTop="10dp"
-            android:id="@+id/delete"
-            android:layout_weight="1"
-
-            />
 
     </LinearLayout>
 
