--- a/app/src/main/res/layout/recycler_conctact_layout.xml
+++ b/app/src/main/res/layout/recycler_conctact_layout.xml
@@ -1,9 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="10dp">
+    android:layout_marginBottom="3dp">
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:elevation="11dp"
+        app:cardBackgroundColor="#00BCD4"
+        >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_margin="10dp"
+            >
+    <ImageView
+        android:layout_width="75dp"
+        android:layout_height="70dp"
+        android:src="@drawable/baseline_person_24"
+        android:layout_marginRight="10dp"
+        />
 
    <LinearLayout
        android:layout_width="match_parent"
@@ -32,10 +51,12 @@
     <ImageButton
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="9"
+        android:layout_weight="2.5"
         android:background="@android:color/transparent"
         android:src="@drawable/baseline_more_vert_24"
         android:id="@+id/more"
         />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
 </LinearLayout>
